--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -33,7 +33,6 @@
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
-		<RowDefinition Height="Auto" />
 		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
 	<TextBlock Grid.Row="0" FontSize="14pt" FontFamily="{StaticResource CodeFontFamily}" >
@@ -81,18 +80,10 @@
 			<ColumnDefinition Width="75" />
 			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
-		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="XAML:" Padding="2,0" IsChecked="{Binding Path=Element.HasXAMLType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateXAMLBinding" ToolTip="Tells NETPath to generate a WPF binding for this member." Unchecked="GenerateXAMLBinding_Unchecked" />
+		<ToggleButton Grid.Column="0" Margin="0,5,5,5" Content="XAML:" Padding="2,0" IsChecked="{Binding Path=Element.HasXAMLType}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateXAMLBinding" ToolTip="Tells NETPath to generate a XAML binding for this member." Unchecked="GenerateXAMLBinding_Unchecked" />
 		<pc:TextBox Grid.Column="1" Margin="5,5,0,5" MinHeight="24" Name="XAMLName" Text="{Binding Path=Element.XAMLName, UpdateSourceTrigger=PropertyChanged}" LabelText="XAML Name" IsEnabled="{Binding Path=Element.HasXAMLType}" VerticalContentAlignment="Center" Validate="ElementName_Validate" />
 	</Grid>
-	<Grid Name="OrderGrid" Grid.Row="6" >
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="75" />
-			<ColumnDefinition Width="*" />
-		</Grid.ColumnDefinitions>
-		<Label Content="Order:" Margin="0,5,5,5" HorizontalContentAlignment="Center" />
-		<pc:TextBox Grid.Column="1" Margin="5,5,0,5" Name="Order" LabelText="DataMember Order" Text="{Binding Path=Element.Order, Converter={StaticResource ElementOrderConverter}}" Validate="Order_Validate" />
-	</Grid>
-	<TabControl Grid.Row="7" Margin="0,5,0,0" >
+	<TabControl Grid.Row="6" Margin="0,5,0,0" >
 		<TabItem Padding="10,5" IsSelected="True">
 			<TabItem.Header>
 				<TextBlock Text="Options" FontSize="12pt"/>
@@ -105,7 +96,7 @@
 				</Grid.RowDefinitions>
 				<Grid Name="OptionsGrid" Grid.Row="0" Margin="0,5,0,0" >
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="125" />
 						<ColumnDefinition Width="*" />
 						<ColumnDefinition Width="*" />
 						<ColumnDefinition Width="*" />
@@ -113,20 +104,26 @@
 					<Grid.RowDefinitions>
 						<RowDefinition Height="Auto" />
 						<RowDefinition Height="Auto" />
+						<RowDefinition Height="15" />
 						<RowDefinition Height="Auto" />
+						<RowDefinition Height="15" />
 						<RowDefinition Height="Auto" />
 					</Grid.RowDefinitions>
-					<ToggleButton Grid.Column="0" Grid.Row="1" Content="Data Member" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsDataMember}" Name="IsDataMember" ToolTip="Determines if the member is marked as a member of the data contract." />
-					<ToggleButton Grid.Column="1" Grid.Row="1" Content="Read-Only" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsReadOnly}" Name="IsReadOnly" ToolTip="The member is read-only." />
-					<ToggleButton Grid.Column="2" Grid.Row="1" Content="Required" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsRequired}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="IsRequired" ToolTip="The member is required by the data contract." />
-					<ToggleButton Grid.Column="3" Grid.Row="1" Content="Hidden" Margin="5,5,0,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsHidden}" Name="Hidden" ToolTip="Tell the Service Compiler to completely ignore this element." />
-					<ToggleButton Grid.Column="0" Grid.Row="2" Content="Emit Default Value" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EmitDefaultValue}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="EmitDefaultValue" ToolTip="Force WCF emit the default value for the type if no value is provided." />
-					<ToggleButton Grid.Column="1" Grid.Row="2" Content="WinForms Binding" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.GenerateWinFormsSupport}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateWinFormsSupport" ToolTip="Generates support for WinForms databinding." />
-					<ToggleButton Grid.Column="2" Grid.Row="2" Content="Data Revisions" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.DREEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="AutomaticUpdates" ToolTip="The member is included in Automatic Data Updates." />
-					<ToggleButton Grid.Column="3" Grid.Row="2" Content="Protocol Buffers" Margin="5,5,0,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.ProtocolBufferEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="ProtocolBuffers" ToolTip="The member is included in Protocol Buffer serialization." />
-					<ToggleButton Grid.Column="0" Grid.Row="3" Content="PropertyChanged Callback" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.PropertyChangedCallback}" IsEnabled="{Binding Path=Element.CanPropertyChanged}" ToolTip="Determines whether or not support for the PropertyChangedCallback is generated." />
-					<ToggleButton Grid.Column="1" Grid.Row="3" Content="PropertyUpdated Callback" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.PropertyUpdatedCallback}" IsEnabled="{Binding Path=Element.CanPropertyUpdated}" ToolTip="Determines whether or not support for the PropertyUpdatedCallback is generated." />
-					<ToggleButton Grid.Column="2" Grid.Row="3" Content="ValueValidation Callback" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.PropertyValidationCallback}" ToolTip="Determines whether or not support for the ValueValidationCallback is generated." />
+					<Label Content="Data Contract:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="0" />
+					<ToggleButton Grid.Column="1" Grid.Row="0" Content="Data Member" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsDataMember}" Name="IsDataMember" ToolTip="Determines if the member is marked as a member of the data contract." />
+					<ToggleButton Grid.Column="2" Grid.Row="0" Content="Read-Only" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsReadOnly}" Name="IsReadOnly" ToolTip="The member is read-only." />
+					<ToggleButton Grid.Column="3" Grid.Row="0" Content="Hidden" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsHidden}" Name="Hidden" ToolTip="Tell the Service Compiler to completely ignore this element." />
+					<ToggleButton Grid.Column="1" Grid.Row="1" Content="Required" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsRequired}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="IsRequired" ToolTip="The member is required by the data contract." />
+					<ToggleButton Grid.Column="2" Grid.Row="1" Content="Emit Default Value" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EmitDefaultValue}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="EmitDefaultValue" ToolTip="Force WCF emit the default value for the type if no value is provided." />
+					<pc:TextBox Grid.Column="3" Grid.Row="1" Margin="5" Name="Order" LabelText="DataMember Order" Text="{Binding Path=Element.Order, Converter={StaticResource ElementOrderConverter}}" Validate="Order_Validate" />
+					<Label Content="Advanced:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="3" />
+					<ToggleButton Grid.Column="1" Grid.Row="3" Content="WinForms Binding" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.GenerateWinFormsSupport}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateWinFormsSupport" ToolTip="Generates support for Windows Forms INotifyPropertyChanged databinding." />
+					<ToggleButton Grid.Column="2" Grid.Row="3" Content="Data Revisions" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.DREEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Visibility="{Binding Path=Element.Owner.DREEnabled, Converter={StaticResource BoolVisibilityConverter}}" Name="AutomaticUpdates" ToolTip="The member is included in Automatic Data Updates." />
+					<ToggleButton Grid.Column="3" Grid.Row="3" Content="Protocol Buffers" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.ProtocolBufferEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Visibility="{Binding Path=Element.Owner.EnableProtocolBuffers, Converter={StaticResource BoolVisibilityConverter}}" Name="ProtocolBuffers" ToolTip="The member is included in Protocol Buffer serialization." />
+					<Label Content="Callbacks:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="5" Visibility="{Binding Path=Element.Owner.CMDEnabled, Converter={StaticResource BoolVisibilityConverter}}"  />
+					<ToggleButton Grid.Column="1" Grid.Row="5" Content="PropertyChanged Callback" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.PropertyChangedCallback}" IsEnabled="{Binding Path=Element.CanPropertyChanged}" Visibility="{Binding Path=Element.Owner.CMDEnabled, Converter={StaticResource BoolVisibilityConverter}}" ToolTip="Determines whether or not support for the PropertyChangedCallback is generated." />
+					<ToggleButton Grid.Column="2" Grid.Row="5" Content="PropertyUpdated Callback" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.PropertyUpdatedCallback}" IsEnabled="{Binding Path=Element.CanPropertyUpdated}" Visibility="{Binding Path=Element.Owner.CMDEnabled, Converter={StaticResource BoolVisibilityConverter}}" ToolTip="Determines whether or not support for the PropertyUpdatedCallback is generated." />
+					<ToggleButton Grid.Column="3" Grid.Row="5" Content="ValueValidation Callback" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.PropertyValidationCallback}" Visibility="{Binding Path=Element.Owner.CMDEnabled, Converter={StaticResource BoolVisibilityConverter}}" ToolTip="Determines whether or not support for the ValueValidationCallback is generated." />
 				</Grid>
 				<Grid Name="DREGrid" Grid.Row="1" Margin="0,5,0,0" Visibility="{Binding Path=Element.DREEnabled, Converter={StaticResource BoolVisibilityConverter}}" >
 					<Grid.ColumnDefinitions>
