--- a/Designer/Interface/Service/Method.xaml
+++ b/Designer/Interface/Service/Method.xaml
@@ -112,6 +112,7 @@
 				</Grid.RowDefinitions>
 				<Grid Grid.Row="0">
 					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="125"/>
 						<ColumnDefinition Width="*"/>
 						<ColumnDefinition Width="*"/>
 						<ColumnDefinition Width="*"/>
@@ -120,21 +121,25 @@
 						<RowDefinition Height="Auto" />
 						<RowDefinition Height="Auto" />
 						<RowDefinition Height="Auto" />
+						<RowDefinition Height="15" />
 						<RowDefinition Height="Auto" />
+						<RowDefinition Height="15" />
 						<RowDefinition Height="Auto" />
 					</Grid.RowDefinitions>
 					<Label Grid.Row="0" Content="Options" FontSize="12pt" Margin="0,5,0,0" />
-					<ToggleButton Content="Synchronous" IsChecked="{Binding Path=MethodData.UseSyncPattern}" Margin="5" Grid.Column="0" Grid.Row="1" />
-					<ToggleButton Content="Asynchronous" IsChecked="{Binding Path=MethodData.UseAsyncPattern}" Margin="5" Grid.Column="1" Grid.Row="1" />
-					<ToggleButton Content="Awaitable" IsChecked="{Binding Path=MethodData.UseAwaitPattern}" Margin="5" Grid.Column="2" Grid.Row="1" />
-					<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="5" Grid.Column="0" Grid.Row="2" />
-					<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="1" Grid.Row="2" Checked="Initiating_Checked" />
-					<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="2" Grid.Row="2" Checked="Terminating_Checked" />
-					<ToggleButton Content="Operation Behavior" IsChecked="{Binding Path=MethodData.HasOperationBehavior}" Margin="5" Grid.Column="0" Grid.Row="3" />
-					<ToggleButton Content="REST Method" IsChecked="{Binding Path=MethodData.IsRESTMethod}" Margin="5" Grid.Column="1" Grid.Row="3" />
-					<ToggleButton Content="Hidden" IsChecked="{Binding Path=MethodData.IsHidden}" Margin="5" Grid.Column="2" Grid.Row="3" />
-					<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="4" />
-					<ComboBox Height="23" Margin="75,5,5,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3" >
+					<Label Content="Calling Convention:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+					<ToggleButton Content="Synchronous" IsChecked="{Binding Path=MethodData.UseSyncPattern}" Margin="5" Grid.Column="1" Grid.Row="1" />
+					<ToggleButton Content="Asynchronous" IsChecked="{Binding Path=MethodData.UseAsyncPattern}" Margin="5" Grid.Column="2" Grid.Row="1" />
+					<ToggleButton Content="Awaitable" IsChecked="{Binding Path=MethodData.UseAwaitPattern}" Margin="5" Grid.Column="3" Grid.Row="1" />
+					<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="5" Grid.Column="1" Grid.Row="2" />
+					<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="2" Grid.Row="2" Checked="Initiating_Checked" />
+					<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="3" Grid.Row="2" Checked="Terminating_Checked" />
+					<Label Content="Contract Options:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="4" />
+					<ToggleButton Content="Operation Behavior" IsChecked="{Binding Path=MethodData.HasOperationBehavior}" Margin="5" Grid.Column="1" Grid.Row="4" />
+					<ToggleButton Content="REST Method" IsChecked="{Binding Path=MethodData.IsRESTMethod}" Margin="5" Grid.Column="2" Grid.Row="4" />
+					<ToggleButton Content="Hidden" IsChecked="{Binding Path=MethodData.IsHidden}" Margin="5" Grid.Column="3" Grid.Row="4" />
+					<Label Content="Protection:" Height="Auto" HorizontalAlignment="Right" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="6" />
+					<ComboBox Height="23" Margin="5,5,5,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="3" >
 						<ComboBoxItem Content="None" />
 						<ComboBoxItem Content="Sign" />
 						<ComboBoxItem Content="Encrypt and Sign" />
