--- a/Designer/Interface/Project/Project.xaml
+++ b/Designer/Interface/Project/Project.xaml
@@ -15,6 +15,7 @@
 				<ResourceDictionary>
 					<Project:ProjectServiceSerializerTypeConverter x:Key="ProjectServiceSerializerTypeConverter" />
 					<Project:BoolDataTypeModeConverter x:Key="BoolDataTypeModeConverter" />
+					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 				</ResourceDictionary>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
@@ -42,6 +43,7 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
@@ -58,6 +60,7 @@
 			</ComboBox.Items>
 		</ComboBox>
 		<CheckBox Grid.Column="2" Grid.Row="1" VerticalAlignment="Center" Margin="5" Content="Enable EntityFramework 6" IsChecked="{Binding Path=Settings.EnableEntityFramework}" />
+		<pc:TextBox Text="{Binding Path=Settings.EnitityDatabaseType, UpdateSourceTrigger=PropertyChanged}" x:Name="EntityName" Grid.Row="1" Grid.Column="3" Margin="5,5,5,5" IsEnabled="{Binding Path=Settings.EnableEntityFramework}" LabelText="Entity Database Context Type" />
 	</Grid>
 	<Grid Grid.Column="0" Grid.Row="4">
 		<Grid.RowDefinitions>
